2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/pluginscheduler.c: Replaced use of includes.h
	by respective direct includes.

2010-12-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* cnvts/find_service/find_service.c: Made several functions
	static. These are not needed externally.

2010-12-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* cnvts/find_service/find_service.c,
	cnvts/openvas_tcp_scanner/openvas_tcp_scanner.c: Replaced
	use of includes.h by respective direct includes.

	* cnvts/synscan/synscan.c: Replaced use of includes.h by
	respective direct includes. Also removed inclusion of
	the openvastcp.h which is only relevant for absence
	of netinet.

	* cnvts/synscan/openvastcp.h, cnvts/synscan/openvasicmp.h,
	cnvts/synscan/openvasip.h, cnvts/synscan/openvasudp.h,
	cnvts/synscan/openvasraw.h: Removed. We assume we have
	have netinet.

	* MANIFEST: Updated.

2010-12-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* include/config.h.in: Remove long obsolete DEFAULT_PORT.

2010-12-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/openvassd.c (main): Adapted --version output to
	comply with GNU Coding Standards
	(http://www.gnu.org/prep/standards/standards.html#g_t_002d_002dversion)

2010-12-29  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/openvassd.c (main): Improved description text.

2010-12-28  Michael Wiegand <michael.wiegand@greenbone.net>

	Split README and INSTALL documentation to be consistent with other
	modules and to conform to the GNU Coding Standards recommendations.

	* README: Moved content regarding installation and configuration to
	new INSTALL file.

	* INSTALL: New file containing installation and configuration hints.

	* MANIFEST: Updated to include INSTALL.

2010-12-20  Michael Wiegand <michael.wiegand@greenbone.net>

	* openvassd/ntp_11.c (ntp_11_parse_input): Fix calls to
	hosts_pause_all and hosts_resume_all to match their prototypes.